--- a/html/invader.html
+++ b/html/invader.html
@@ -8,8 +8,14 @@
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-  <form class="configuration"></form>
-  <div id="invader"></div>
+  <form id="form" class="configuration">
+
+  </form>
+
+  <div id="invader">
+    
+  </div>
+
   <script src="../js/app.js"></script>
 </body>
 </html>
